Fix ugly navbar collapse on small screens

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -17,9 +17,8 @@ footer {
     flex-wrap: wrap;
     justify-content: flex-start;
     font-family: 'Domaine';
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 5rem;
-
 
     li {
       margin: 0 2rem 0 0;
