--- a/assets/scss/items.scss
+++ b/assets/scss/items.scss
@@ -57,7 +57,7 @@
   */
 
   h3 {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     line-height: 25px;
 
