--- a/assets/scss/navigation.scss
+++ b/assets/scss/navigation.scss
@@ -30,7 +30,6 @@
   justify-content: space-between;
   width: 100%;
   margin: 0 auto;
-  padding: 0 4rem;
 
   .nav-controls {
     position: relative;
@@ -74,7 +73,9 @@
     }
 
     .menu-items {
-      margin-left: 2rem;
+      @media screen and (min-width: $phone-large) {
+        margin-left: 2rem;
+      }
 
       .menu-item {
         font-weight: 400;
@@ -82,6 +83,10 @@
         text-transform: uppercase;
         letter-spacing: .1rem;
         margin-left: 2rem;
+
+        @media screen and (max-width: $phone-large - 1) {
+          margin-left: 1rem;
+        }
       }
     }
   }
